rebase of the initial structure

--- a/utils/config/lookup.cfg
+++ b/utils/config/lookup.cfg
@@ -2,5 +2,6 @@
     "NAME"      : "runewords",
     "URL"       : "https://www.diablo2.io/runewords/",
     "CONTAINER" : "article",
-    "ITEM_NAME" : "a"
+    "ITEM_NAME" : "a",
+    "PARSER"    : "html.parser"
 }
