more hotfix -- added minor features

--- a/utils/config/lookup.cfg
+++ b/utils/config/lookup.cfg
@@ -1,7 +1,9 @@
 {
-    "NAME"      : "runewords",
-    "URL"       : "https://www.diablo2.io/runewords/",
-    "CONTAINER" : "article",
-    "ITEM_NAME" : "a",
-    "PARSER"    : "html.parser"
+    "NAME"              : "runewords",
+    "URL"               : "https://www.diablo2.io/runewords/",
+    "CONTAINER"         : "article",
+    "ITEM_NAME"         : "a",
+    "PARSER"            : "html.parser",
+    "TOKENIZER_MODULE"  : "RunewordItemTokenizer",
+    "TOKENIZER_PACKAGE" : "sanctuary.utils.parser.tokenizers"
 }
