added more variables for lookup

--- a/utils/config/lookup.cfg
+++ b/utils/config/lookup.cfg
@@ -5,5 +5,9 @@
     "ITEM_NAME"         : "a",
     "PARSER"            : "html.parser",
     "TOKENIZER_MODULE"  : "RunewordItemTokenizer",
-    "TOKENIZER_PACKAGE" : "sanctuary.utils.parser.tokenizers"
+    "TOKENIZER_PACKAGE" : "sanctuary.utils.parser.tokenizers",
+    "PARENT_CONTAINER"  : "article",
+    "CHILD_CONTAINER"   : "span",
+    "TITLE_CONTAINER"   : "h3",
+    "TITLE_CLASS"       : "z-sort-name",
 }
