--- a/utils/config/lookup.cfg
+++ b/utils/config/lookup.cfg
@@ -9,5 +9,5 @@
     "PARENT_CONTAINER"  : "article",
     "CHILD_CONTAINER"   : "span",
     "TITLE_CONTAINER"   : "h3",
-    "TITLE_CLASS"       : "z-sort-name",
+    "TITLE_CLASS"       : "z-sort-name"
 }
